--- a/css/iGeniusStep2.css
+++ b/css/iGeniusStep2.css
@@ -6,7 +6,9 @@ body {
   margin-left: 9px;
   margin-right: 9px;
   margin-bottom: 12%;
+  overflow-x: hidden;
 }
+
 .nav-img img {
   width: 11%;
   padding: 21px;
@@ -27,7 +29,7 @@ body {
   margin-top: 42px;
   column-gap: 10px;
   align-items: center;
-  width: 99%;
+  width: 100%;
 }
 .topbar ul {
   list-style-type: none;
@@ -315,11 +317,32 @@ hr:hover {
   .tab button {
     padding: 13px 30px;
   }
-}
-
-@media only screen and (max-width: 800px) {
   .nav-img img {
     width: 29%;
+  }
+
+  .topbar {
+    width: auto;
+  }
+
+  .Itemactive {
+    margin-right: 0px;
+  }
+
+  span {
+    margin-left: -28px;
+    margin-bottom: 0px;
+  }
+
+  .topbar-media ul li a {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .cont-sty {
+    margin-left: 2%;
+    margin-right: 2%;
   }
 }
 
@@ -343,9 +366,6 @@ hr:hover {
     padding: 13px 10px;
     font-size: 10px;
   }
-  .topbar {
-    width: 118%;
-  }
 
   .topbar a {
     margin-right: 56px;
@@ -362,5 +382,33 @@ hr:hover {
     width: 192%;
     margin-top: 9px;
     margin-bottom: 46px;
+  }
+}
+
+@media only screen and (max-width: 426px) {
+  body {
+    overflow-x: hidden;
+  }
+
+  .topbar {
+    justify-content: right;
+    column-gap: 2px;
+  }
+
+  .nav-img {
+    width: 100vw;
+    overflow-x: hidden;
+  }
+
+  .topbar a {
+    font-size: 16px;
+  }
+
+  .footer {
+    background-color: #414142;
+    position: fixed;
+    bottom: 0%;
+    left: 0px;
+    width: 100vw;
   }
 }
