--- a/css/iGeniusStep3.css
+++ b/css/iGeniusStep3.css
@@ -27,7 +27,7 @@ body {
   margin-top: 42px;
   column-gap: 10px;
   align-items: center;
-  width: 99%;
+  width: 100%;
 }
 .topbar ul {
   list-style-type: none;
@@ -37,7 +37,7 @@ body {
 }
 
 .topbar li {
-  display: inline-block;
+  float: left;
 }
 .topbar a {
   padding: 15px 20px;
@@ -274,17 +274,19 @@ label {
   .price {
     margin-left: -3%;
   }
+
+  .price ul {
+    margin-left: 0;
+  }
 }
 
 @media only screen and (max-width: 800px) {
   .nav-img img {
     width: 29%;
   }
-}
 
-@media only screen and (max-width: 8px) {
-  .price {
-    margin-left: -3%;
+  .footer {
+    width: 100%;
   }
 }
 
@@ -318,18 +320,19 @@ label {
     font-size: 10px;
   }
   .topbar {
-    width: 118%;
+    width: 100%;
   }
 
   .topbar a {
-    margin-right: 56px;
+    margin-right: 0px;
+    font-size: 13px !important;
   }
 }
 
 @media only screen and (max-width: 619px) {
   .price-quest {
     font-size: 13px;
-    margin-left: 8%;
+    margin-left: 0%;
   }
 
   .price ul {
