--- a/css/iGeniusStep2.css
+++ b/css/iGeniusStep2.css
@@ -111,6 +111,7 @@ hr:hover {
 .tab {
   overflow: hidden;
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   /* border: 1px solid #e9e9e9;*/
   margin-top: 17px;
@@ -287,7 +288,7 @@ hr:hover {
 
 /**********Media Query*********/
 
-@media only screen and (max-width: 1210px) {
+@media only screen and (max-width: 1211px) {
   .topbar ul {
     display: grid;
     text-align: center;
@@ -313,36 +314,9 @@ hr:hover {
   }
 }
 
-@media screen and (max-width: 900px) {
-  .tab button {
-    padding: 13px 30px;
-  }
+@media only screen and (max-width: 800px) {
   .nav-img img {
     width: 29%;
-  }
-
-  .topbar {
-    width: auto;
-  }
-
-  .Itemactive {
-    margin-right: 0px;
-  }
-
-  span {
-    margin-left: -28px;
-    margin-bottom: 0px;
-  }
-
-  .topbar-media ul li a {
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-  }
-
-  .cont-sty {
-    margin-left: 2%;
-    margin-right: 2%;
   }
 }
 
@@ -365,10 +339,15 @@ hr:hover {
   .tab button {
     padding: 13px 10px;
     font-size: 10px;
+    letter-spacing: 2px;
   }
 
   .topbar a {
     margin-right: 56px;
+  }
+
+  .topbar {
+    width: auto;
   }
 }
 
@@ -401,7 +380,7 @@ hr:hover {
   }
 
   .topbar a {
-    font-size: 16px;
+    font-size: 12px;
   }
 
   .footer {
@@ -410,5 +389,10 @@ hr:hover {
     bottom: 0%;
     left: 0px;
     width: 100vw;
+  }
+
+  .cont-sty {
+    margin-left: 0%;
+    margin-right: 0%;
   }
 }
