I increased the font in the moblie view for the nav

--- a/css/iGeniusStep3.css
+++ b/css/iGeniusStep3.css
@@ -325,7 +325,8 @@ label {
 
   .topbar a {
     margin-right: 0px;
-    font-size: 13px !important;
+    font-size: 15px !important;
+    font-family: math;
   }
 }
 
