--- a/css/iGeniusStep2.css
+++ b/css/iGeniusStep2.css
@@ -1,12 +1,15 @@
-* {
-  font-family: cursive;
-}
+@import url(https://db.onlinewebfonts.com/c/12108809f49c49bcdc126dcecc938761?family=Nexa+Light);
 
 body {
   margin-left: 9px;
   margin-right: 9px;
   margin-bottom: 12%;
   overflow-x: hidden;
+  font-family: 'Nexa Light' !important;
+}
+
+.center {
+  text-align: center;
 }
 
 .nav-img img {
@@ -107,7 +110,11 @@ hr:hover {
   text-align: center;
   margin-right: -14px;
 }
-
+.main-list {
+  display: flex;
+  align-items: center;
+  gap: 2px;
+}
 .tab {
   overflow: hidden;
   display: flex;
@@ -131,7 +138,6 @@ hr:hover {
   padding: 14px 36px;
   transition: 0.3s;
   font-size: 15px;
-  font-family: sans-serif;
 }
 
 /* Create an active/current tablink class */
@@ -205,7 +211,6 @@ hr:hover {
   color: #44b2dd;
   font-size: 22px;
   font-weight: bold;
-  font-family: auto;
 }
 
 .slide-cont-price {
@@ -218,7 +223,6 @@ hr:hover {
 .slide-cont-text {
   margin-left: 24px;
   line-height: 20px;
-  font-family: system-ui;
   letter-spacing: 1px;
   font-size: 15px;
   margin-top: -5px;
@@ -229,7 +233,6 @@ hr:hover {
   background-color: #44b2dd;
   border-radius: 4px;
   opacity: 1;
-  font-family: math;
   letter-spacing: 2px;
   padding-top: 10px;
   padding-bottom: 10px;
@@ -263,7 +266,6 @@ hr:hover {
 .foot-btn a {
   color: white;
   text-decoration: none;
-  font-family: fangsong;
 }
 
 .footer {
@@ -282,7 +284,6 @@ hr:hover {
   margin-left: 13%;
   margin-bottom: 28px;
   height: 0px;
-  font-family: san-serif;
 }
 
 /**********Media Query*********/
